client/src/css/scss/base/_global.scss
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: Roboto;
  background-color: $bg-color-dark-4;
  color: $font-color-light-1;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/* width */
::-webkit-scrollbar {
  width: 0.6rem;
  max-height: 69px;
}

/* Track */
::-webkit-scrollbar-track {
  opacity: 0;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 7px;
}

.AppContainer {
  height: calc(100vh - 75px);
  display: flex;
  flex-direction: column;
}

.LinkText {
  color: #8c93dd;
  text-decoration: underline;
  cursor: pointer;
}

.ErrorText {
  color: #ff9494;
}

.Seperator {
  width: 100%;
  height: 2px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 10px;
  background: $primay-color-light-4;
}

.OptionSeperator {
  font-size: 1pt;
  background-color: $primay-color-light-4;
}

input,
select {
  box-sizing: border-box;
  font-family: inherit;
  font-size: 18px;
  height: 40px;
  padding: 10px;
}

select {
  padding: 0 10px;
}

textarea {
  font-family: inherit;
  box-sizing: border-box;
  font-size: 18px;
  padding: 10px;
  resize: none;
}

input,
textarea,
select {
  outline: none;
  color: $font-color-light-2;
  border: 1px solid $bg-color-dark-2;
  border-radius: 3px;
  background-color: $bg-color-dark-4;
  &:focus {
    box-shadow: 0 0 2px 2px $primay-color-light-1;
  }
  &::placeholder {
    color: $font-color-light-4;
    font-weight: 500;
  }
}

